# dash-mcp-server

./: README.md  pyproject.toml
src/dash_mcp_server/: server.py
